--- a/index.html
+++ b/index.html
@@ -139,6 +139,22 @@
 
                 <div class="col-md-12 col-sm-12 calc-wholesale">
                     <div class="col-md-5 col-sm-5 inputs">
+                        <div class="col-md-12 col-sm-12 title-inputs">Виберіть країну</div>
+                        <div class="select col-md-3 col-7">
+                            <div class="select-header select-header-wholesale"><span class="select-current">DE</span></div>
+                            <div class="select-body country-index">
+                                <div class="select-item">DE</div>
+                                <div class="select-item">PL</div>
+                                <div class="select-item">FR</div>
+                                <div class="select-item">NL</div>
+                                <div class="select-item">AT</div>
+                                <div class="select-item">BE</div>
+                                <div class="select-item">ES</div>
+                                <div class="select-item">SE</div>
+                                <div class="select-item">IT</div>
+                                <div class="select-item">PT</div>
+                            </div>
+                        </div>
                         <div class="col-md-12 col-12 title-inputs">Вартість авто + аук збір</div>
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість авто">
                         <div class="col-md-12 col-sm-12 title-inputs">Доставка по Європi</div>
